--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,104 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>IgsnApplication</title>
+    <title>Online Application</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <%= yield %>
+    <header class="headerGrid">
+      <section>
+        <div class="logo aligned">
+          <%= image_tag('einstein.jpg', alt: 'Albert Einstein') %>
+        </div>
+        <h1 class="aligned">Online Application</h1>
+      </section>
+      <div class="ui quicknav centered dropdown">
+        QUICK NAV <i class="dropdown icon"></i>
+        <div class="menu">
+          <a class="item" href="/">New Application</a>
+          <a class="item" href="/applicants">All Applicants</a>
+        </div>
+      </div>
+      <%= image_tag('LMU-01.png', alt: 'LMU logo') %>
+    </header>
+
+    <main class="content">
+      <div class="breadcrumb-container">
+        <div class="ui breadcrumb">
+          <a class="section" href="https://www.en.uni-muenchen.de">Ludwig-Maximilians-Universität</a>
+          <i class="right angle icon divider"></i>
+          <a class="section" href="http://www.en.uni-muenchen.de/about_lmu/academics/faculties/fak_16_mathe/index.html">Faculty of Mathematics</a>
+          <i class="right angle icon divider"></i><%= @current_page %>
+        </div>
+      </div>
+
+      <div class="ui container">
+        <% flash.each do |key, value| %>
+          <div class="<%= flash_class(key) %> closable">
+            <i class="close icon"></i>
+            <%= value %>
+          </div>
+        <% end %>
+
+        <%= yield %>
+      </div>
+    </main>
+
+    <div class="ui vertical footer segment">
+      <div class="ui aligned container">
+        <div class="ui stackable inverted grid">
+          <div class="ten wide column">
+            <h4 class="ui header">About Us</h4>
+            <p>
+              Scuttle rigging scurvy cog lee nipper Letter of Marque transom Buccaneer Privateer. Chain Shot ho Letter of Marque hornswaggle booty fathom jack bounty maroon Barbary Coast. Nipperkin Barbary Coast measured fer yer chains blow the man down Letter of Marque smartly splice the main brace furl parley starboard.
+            </p>
+            <p>
+              Jib scurvy bilged on her anchor ballast Arr topgallant gaff Yellow Jack stern long clothes. Ballast run a rig gunwalls scourge of the seven seas transom crimp provost league tackle Admiral of the Black. Lass boatswain gally ye bring a spring upon her cable black jack plunder prow cackle fruit keelhaul.
+            </p>
+            <p>
+              Fire ship Sink me hardtack hearties league lass Privateer Nelsons folly broadside rum. Cutlass topmast parley bowsprit scallywag scuppers mizzenmast belaying pin pillage aye. Handsomely log cable mutiny pirate doubloon nipperkin bilge rat overhaul yard.
+            </p>
+          </div>
+          <div class="five wide right floated column">
+            <h4 class="ui header">Contact Us</h4>
+            <div class="ui list">
+              <div class="item">
+                <i class="map marker alternate icon"></i>
+                <div class="content">
+                  Ludwig-Maximilians-Universität München<br>
+                  Geschwister-Scholl-Platz 1<br>
+                  80539 Munich
+                </div>
+              </div>
+              <div class="item">
+                <i class="phone icon"></i>
+                <div class="content">
+                  Tel: +49 (0) 89 / 2180-0<br>
+                  Fax: +49 (0) 89 / 2180-1
+                </div>
+              </div>
+              <div class="item">
+                <i class="linkify icon"></i>
+                <div class="content">
+                  <a href="https://www.en.uni-muenchen.de/index.html">https://www.en.uni-muenchen.de/index.html</a><br>
+                  <a href="mailto:albert@einstein.com">albert@einstein.com</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="ui inverted section divider"></div>
+        <div class="ui horizontal small divided link list">
+          <a class="item" href="#">Impressum</a>
+          <a class="item" href="#">Data Privacy Notice</a>
+          <span class="item">© LMU <%= Time.current.year %></span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
