--- a/app/views/applicants/_form.html.erb
+++ b/app/views/applicants/_form.html.erb
@@ -11,57 +11,5 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :programme %>
-    <%= form.text_field :programme %>
-  </div>
-
-  <div class="field">
-    <%= form.label :first_name %>
-    <%= form.text_field :first_name %>
-  </div>
-
-  <div class="field">
-    <%= form.label :last_name %>
-    <%= form.text_field :last_name %>
-  </div>
-
-  <div class="field">
-    <%= form.label :gender %>
-    <%= form.text_field :gender %>
-  </div>
-
-  <div class="field">
-    <%= form.label :date_of_birth %>
-    <%= form.text_field :date_of_birth %>
-  </div>
-
-  <div class="field">
-    <%= form.label :country_of_birth %>
-    <%= form.text_field :country_of_birth %>
-  </div>
-
-  <div class="field">
-    <%= form.label :nationality %>
-    <%= form.text_field :nationality %>
-  </div>
-
-  <div class="field">
-    <%= form.label :marital_status %>
-    <%= form.text_field :marital_status %>
-  </div>
-
-  <div class="field">
-    <%= form.label :children %>
-    <%= form.text_field :children %>
-  </div>
-
-  <div class="field">
-    <%= form.label :email %>
-    <%= form.text_field :email %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
+  <div id="form"></div>
 <% end %>
